--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -8,11 +8,13 @@
   display: flex;
   justify-content: center;
   padding-top: 20px;
+  position: relative;
 }
 
 .dropdownContainer {
   width: 174px;
   font-size: 17px;
+  position: absolute;
 }
 
 .dropdownButton {
@@ -58,6 +60,8 @@
 
 .dropdownOptions {
   display: none;
+  overflow: auto;
+  max-height: 20rem;
   list-style: none;
   padding: 4px 0;
   margin-top: -4px;
