--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -4,11 +4,6 @@
   color: black;
 }
 
-.dropdownWrapper {
-  display: flex;
-  justify-content: center;
-}
-
 .dropdownContainer {
   width: 174px;
   font-size: 17px;
@@ -64,6 +59,9 @@
   list-style: none;
   padding: 4px 0;
   margin-top: -4px;
+  width: 100%;
+  border: 1px solid #ededed;
+  border-radius: 0 0 7px 7px;
 }
 
 .dropdownOptions.show {
